--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "url": "https://github.com/imtiaz101325/simple_nodejs_app"
   },
   "scripts": {
-    "start": "./bin/app",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "http-errors": "^1.8.0",
-    "pino": "^6.3.2",
-    "pino-http": "^5.2.0",
-    "pino-pretty": "^4.0.0"
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.2.0"
   }
 }
